; ModuleID = '/home/carl/AnghaBench/gb-studio/buildTools/win32-ia32/gbdk/examples/gb/extr_paint.c_main.c'
source_filename = "/home/carl/AnghaBench/gb-studio/buildTools/win32-ia32/gbdk/examples/gb/extr_paint.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OBP1_REG = common dso_local global i32 0, align 4
@current_tool = common dso_local global i64 0, align 8
@BLACK = common dso_local global i32 0, align 4
@current_color = common dso_local global i32 0, align 4
@SOLID = common dso_local global i32 0, align 4
@current_mode = common dso_local global i32 0, align 4
@PEN = common dso_local global i32 0, align 4
@current_cursor = common dso_local global i32 0, align 4
@menu_cursor_pos = common dso_local global i64 0, align 8
@cursor_x = common dso_local global i32 0, align 4
@cursor_y = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main() #0 {
  store i32 224, i32* @OBP1_REG, align 4
  %1 = call i32 (...) @splash()
  store i64 0, i64* @current_tool, align 8
  %2 = load i32, i32* @BLACK, align 4
  store i32 %2, i32* @current_color, align 4
  %3 = load i32, i32* @SOLID, align 4
  store i32 %3, i32* @current_mode, align 4
  %4 = load i32, i32* @PEN, align 4
  store i32 %4, i32* @current_cursor, align 4
  store i64 0, i64* @menu_cursor_pos, align 8
  store i32 80, i32* @cursor_x, align 4
  store i32 72, i32* @cursor_y, align 4
  %5 = call i32 (...) @run()
  ret void
}

declare dso_local i32 @splash(...) #1

declare dso_local i32 @run(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
